Fix bug in update getting started guide workflow
This change fixes a bug in the update getting started guide workflow
when assertions are disabled. This change also fixes a bug where
'--verbose' executed git diff command in interactive mode.

Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.github/workflows/update-getting-started-guide.yml
+++ b/.github/workflows/update-getting-started-guide.yml
@@ -23,9 +23,6 @@ jobs:
       contents: read
       pull-requests: read
 
-    env:
-      RELEASE_TAG: ''
-
     steps:
       - uses: actions/checkout@v4
         with:
@@ -33,11 +30,8 @@ jobs:
             docs/getting-started.md
             scripts/update-getting-started-guide-version.sh
 
-      - name: Mock release tag on pull request
-        run: echo "RELEASE_TAG=v0.0.0-${{ github.event.pull_request.number }}" >> $GITHUB_ENV
-
       - name: Test update getting started version
-        run: bash scripts/update-getting-started-guide-version.sh --assert ${{ env.RELEASE_TAG }}
+        run: bash scripts/update-getting-started-guide-version.sh --assert v0.0.0-${{ github.event.pull_request.number }}
 
   update-version:
     if: github.event_name == 'release'
