--- a/config/config.toml
+++ b/config/config.toml
@@ -31,6 +31,7 @@ metrics_network="" # Uses default metrics network
 # no_prometheus=true # Defined above, can't be redeclared
 debug_address=""
 metadata_store="db"
+skip_check_snapshotter_supported=false
 
 [http]
 MaxRetries=0
